# weAI-Chat

./: README.md
api/: .env.sample  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/app/: main.py
api/app/core/: config.py  schema.py
api/app/core/db/: __init__.py  models.py
api/app/helpers/: cookie.py  password.py  tokens.py
api/app/middleware/: __init__.py  rate_limit.py
api/app/routes/: __init__.py  admin.py  auth.py  chat.py  uploads.py  users.py
api/app/services/: chat_with_gemini.py  crawler.py  markdown_converter.py
api/app/services/rag/: embedding_generator.py  retriever.py
api/data/: users.csv
api/routers/: auth.py
api/services/: chat_with_gemini.py
api/sessions/: auth.py
client/: package-lock.json  package.json
client/src/: main.tsx  routes.tsx
client/src/components/: ProtectedRoute.tsx  app-header.tsx  app-sidebar.tsx  chat-message.tsx  link-scraping-indicator.tsx  profile-dropdown.tsx
client/src/components/ui/: table.tsx
client/src/context/: AppContextProvider.tsx  AuthProvider.tsx
client/src/lib/: fetch-sse.ts  file-upload.ts  serverCall.ts
client/src/pages/: chat.tsx  login.tsx  register.tsx
client/src/pages/admin/: chat-messages.tsx  fileupload.tsx  index.tsx  layout.tsx  messages.tsx  testing.tsx  users.tsx  website.tsx
client/src/pages/chat/: chat-conversation.tsx  index.tsx  new.tsx
client/src/types/: admin.ts  chat.ts  chunksUpload.ts  serverCall.ts  sidebar.ts  training.ts  userAuth.ts
client/src/utils/: admin.ts  api-constant.ts  chat.ts  serverCall.ts  userAuth.ts
