[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "chromadb>=0.6.3",
    "crawl4ai>=0.6.3",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.16.1",
    "markitdown[all]>=0.1.1",
    "mysql-connector-python>=9.3.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "urlextract>=1.9.0",
]
